link css and js file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Project 1</title>
+  <title>Web Page Scaffold</title>
 
   <!-- reset.css must link before the main.css -->
   <link href="css.reset.css" rel="stylesheet" type="text/css">
@@ -13,18 +13,48 @@
 <body>
   <!-- content starts -->
   <main>
-    <h1 class="hidden">Homework #1 - Zhihan Chen</h1>
-    <h2 class="main-heading"></h2>
-    <nav>
-      <h2 class="hidden"></h2>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </nav>
+    <section id="topBar"></section>
+    <!-- end topBar -->
+
+    <div id="siteContainer">
+
+      <header id="mainHeader">
+        <div id="logo"><p>Logo</p></div>
+        <!-- end logo -->
+        <nav id="mainNav"><p>Nav</p></nav>
+        <!-- end mainNav -->
+      </header>
+      <!-- end main header -->
+
+      <section id="promo">
+        <div id="promoText"><p>Promo Text</p></div>
+        <!-- end promoText -->
+        <div id="promoImg"><p>Promo Image</p></div>
+        <!-- end promoImg -->
+      </section>
+      <!-- end promo section-->
+
+      <section id="productInfo">
+        <section class="productDesc"><p>Product Images &amp; Text</p></section>
+        <!-- end productDecs1 -->
+        <section class="productDesc"><p>Product Images &amp; Text</p></section>
+        <!-- end productDesc2 -->
+        <section class="productDesc"><p>Product Images &amp; Text</p></section>
+        <!-- end productDesc3 -->
+        <section class="productDescLast"><p>Product Images &amp; Text</p></section>
+        <!-- end productDescLast -->
+      </section>
+      <!-- end productInfo -->
+
+      <footer id="mainFooter">
+        <div id="footerNav"><p>Footer Nav</p></div>
+        <!-- end footerNav -->
+        <div id="copyRight"><p>Copyright Info</p></div>
+        <!-- end copyright -->
+      </footer>
+      <!-- end mainFooter -->
+
+    </div>
 
   </main>
 <!-- js file goes before the close body tag -->
