add flavor page and css

--- a/flavor.html
+++ b/flavor.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Web Page Scaffold</title>
+  <title>Flavor & Price</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -32,43 +32,40 @@
       </header>
       <!-- end the main header -->
 
-      <section class="left">
-        <h1 class="hidden">About Gas-X Section</h1>
-        <div class="leftImg"><p>About Gas-x Image</p></div>
-        <div class="leftContent"><p>About Gas-X Content</p></div>
+      <section id="normalLight">
+        <h2 class="hidden">Normal Version Compare To Light Version</h2>
+        <section id="sideBox">
+          <h3 class="hidden">Normal Gas-x Introduction</h3>
+          <p>normal content</p>
+        </section>
+        <section id="centerImg">
+          <h3 class="hidden">Image of normal and light version compare</h3>
+          <p>center Image</p>
+        </section>
+        <section id="sideBox2">
+          <h3 class="hidden">Light Gas-x Introduction</h3>
+          <p>light content</p>
+        </section>
       </section>
-      <!-- end the about Gas-X section -->
-
-
-      <section id="benefit">
-        <h1 class="hidden">benefit of Gas-X Section</h1>
-        <div class="benefitTitle"><p>Benefit of the Gas-X</p></div>
-        <section class="benefitDetail"><p>Benefit 1</p></section>
-        <!-- end benefit 1 -->
-        <section class="benefitDetail2"><p>Benefit 2</p></section>
-        <!-- end benefit 2 -->
-        <section class="benefitDetail2"><p>Benefit 3</p></section>
-        <!-- end benefit 3 -->
+      <!-- end the compare of normal and light -->
+      <section id="flavorChoice">
+        <h2 class="hidden">Choice of Flavor and Price</h2>
+        <section class="flavorChoice1">
+          <h3 class="hidden">Cherry flavor of Gas-X</h3>
+          <div class="flavorImg"><p>Flavor Image</p></div>
+          <div class="flavorContent"><p>Flavor Content</p></div>
+        </section>
+        <section class="flavorChoice1">
+          <h3 class="hidden">peppermint flavor of Gas-X</h3>
+          <div class="flavorImg"><p>Flavor Image</p></div>
+          <div class="flavorContent"><p>Flavor Content</p></div>
+        </section>
+        <section class="flavorChoice1">
+          <h3 class="hidden">Grape flavor of Gas-X</h3>
+          <div class="flavorImg"><p>Flavor Image</p></div>
+          <div class="flavorContent"><p>Flavor Content</p></div>
+        </section>
       </section>
-      <!-- end the benefit of Gas-x -->
-
-      <section id="flavor">
-        <h1 class="hidden">Flavor & Price Section</h1>
-        <section class="flavorBox"><p>flavor 1</p></section>
-        <!-- end flavor 1 -->
-        <section class="flavorBox2"><p>flavor 2</p></section>
-        <!-- end flavor 2 -->
-        <section class="flavorBox2"><p>flavor 3</p></section>
-        <!-- end flavor 3 -->
-      </section>
-      <!-- end flavor and price section -->
-
-      <section class="left">
-        <h1 class="hidden">Company Goal of Gas-X</h1>
-        <div class="leftImg"><p>Image of Gas-x Goal</p></div>
-        <div class="leftContent"><p>Goal content & button</p></div>
-      </section>
-      <!-- end the goal section -->
       <footer id="mainFooter">
         <h1 class="hidden">Main Footer</h1>
         <div id="footerNav"><p>Footer Nav</p></div>
