adjust the css and html

--- a/flavor.html
+++ b/flavor.html
@@ -14,20 +14,30 @@
 </head>
 <body>
   <!-- content starts -->
+  <h1 class="hidden">The Gas-X Flavor & Price</h1>
   <main>
     <div id="siteContainer">
-      <h1 class="hidden">Main Navigation for Gas-X</h1>
       <nav id="mainNav">
-        <div id="logo"><p>Logo</p></div>
+        <h2 class="hidden">Main Navigation section for Gas-X</h2>
+        <div id="logo">
+          <h3 class="hidden">Logo</h3>
+          <p>Logo</p>
+        </div>
         <!-- end logo -->
-        <div id="WebName"><p>Gas-X</P></div>
+        <div id="WebName">
+          <h3 class="hidden">Gas-X</h3>
+          <p>Gas-X</P>
+          </div>
         <!-- end title -->
-        <nav id="Nav"><p>Nav</p></nav>
+        <nav id="Nav">
+          <h3 class="hidden">Navigation</h3>
+          <p>Nav</p>
+        </nav>
         <!-- end Nav -->
       </nav>
       <!-- end main Nav -->
       <header id="Header">
-        <h1 class="hidden">Hero Image With Website Introduction</h1>
+        <h2 class="hidden">Hero Image With Website Introduction</h2>
         <div id="IntroHeader"><p>Header & Hero Image</p></div>
       </header>
       <!-- end the main header -->
@@ -67,13 +77,18 @@
         </section>
       </section>
       <footer id="mainFooter">
-        <h1 class="hidden">Main Footer</h1>
+        <h2 class="hidden">Main Footer</h2>
         <div id="footerNav"><p>Footer Nav</p></div>
         <!-- end footerNav -->
         <div id="contact"><p>Contact</p></div>
-        <!-- end copyright -->
+        <!-- end the contact button -->
       </footer>
       <!-- end mainFooter -->
+      <section id="copyright">
+        <h3 class="hidden">Copyright</h3>
+        <div id="copy"><p>Copyright © by Zhihan Chen</p></div>
+      </section>
+      <!-- end copyright -->
     </div>
 
   </main>
