--- a/index.html
+++ b/index.html
@@ -14,69 +14,135 @@
 </head>
 <body>
   <!-- content starts -->
+  <h1 class="hidden">Gas-X</h1>
   <main>
     <div id="siteContainer">
-      <h1 class="hidden">Main Navigation for Gas-X</h1>
       <nav id="mainNav">
-        <div id="logo"><p>Logo</p></div>
+        <h2 class="hidden">Main Navigation section for Gas-X</h2>
+        <div id="logo">
+          <h3 class="hidden">Logo</h3>
+          <p>Logo</p>
+        </div>
         <!-- end logo -->
-        <div id="WebName"><p>Gas-X</P></div>
+        <div id="WebName">
+          <h3 class="hidden">Gas-X</h3>
+          <p>Gas-X</P>
+          </div>
         <!-- end title -->
-        <nav id="Nav"><p>Nav</p></nav>
+        <nav id="Nav">
+          <h3 class="hidden">Navigation</h3>
+          <p>Nav</p>
+        </nav>
         <!-- end Nav -->
       </nav>
       <!-- end main Nav -->
-      <header id="Header">
-        <h1 class="hidden">Hero Image With Website Introduction</h1>
-        <div id="IntroHeader"><p>Header & Hero Image</p></div>
-      </header>
+
+
+      <section>
+        <header id="Header">
+          <h2 class="hidden">Gas-X Intro</h2>
+          <div id="IntroHeader">
+            <p>Header & Hero Image</p>
+          </div>
+        </header>
+      </section>
       <!-- end the main header -->
 
+
       <section class="left">
-        <h1 class="hidden">About Gas-X Section</h1>
-        <div class="leftImg"><p>About Gas-x Image</p></div>
-        <div class="leftContent"><p>About Gas-X Content</p></div>
+        <h2 class="hidden">About Gas-X Section</h2>
+        <div class="leftImg">
+          <h3 class="hidden">About Gas-X Image</h3>
+          <p>About Gas-x Image</p>
+        </div>
+        <h3 class="hidden">About Content</h3>
+        <div class="leftContent">
+          <p>About Gas-X Content</p>
+        </div>
       </section>
       <!-- end the about Gas-X section -->
 
 
       <section id="benefit">
-        <h1 class="hidden">benefit of Gas-X Section</h1>
-        <div class="benefitTitle"><p>Benefit of the Gas-X</p></div>
-        <section class="benefitDetail"><p>Benefit 1</p></section>
+        <h2 class="hidden">Benefit of Gas-X</h2>
+        <div class="benefitTitle">
+          <p>Benefit of the Gas-X</p>
+        </div>
+        <section class="benefitDetail">
+          <h3 class="hidden">Benefit 1</h3>
+          <p>Benefit 1</p>
+        </section>
         <!-- end benefit 1 -->
-        <section class="benefitDetail2"><p>Benefit 2</p></section>
+        <section class="benefitDetail2">
+          <h3 class="hidden">Benefit 2</h3>
+          <p>Benefit 2</p>
+        </section>
         <!-- end benefit 2 -->
-        <section class="benefitDetail2"><p>Benefit 3</p></section>
+        <section class="benefitDetail2">
+          <h3 class="hidden">Benefit 3</h3>
+          <p>Benefit 3</p>
+        </section>
         <!-- end benefit 3 -->
       </section>
       <!-- end the benefit of Gas-x -->
+      <section class="button">
+        <h2 class="hidden">Benefit Button</h2>
+        <div class="theButton"><p>Button</p></div>
+      </section>
+      <!-- end button section -->
+
 
       <section id="flavor">
-        <h1 class="hidden">Flavor & Price Section</h1>
-        <section class="flavorBox"><p>flavor 1</p></section>
+        <h2 class="hidden">Flavor and Price Section</h2>
+        <section class="flavorBox">
+          <h3 class="hidden">peppermint flavor</h3>
+          <p>flavor 1</p>
+        </section>
         <!-- end flavor 1 -->
-        <section class="flavorBox2"><p>flavor 2</p></section>
+        <section class="flavorBox2">
+          <h3 class="hidden">Cherry flavor</h3>
+          <p>flavor 2</p>
+        </section>
         <!-- end flavor 2 -->
-        <section class="flavorBox2"><p>flavor 3</p></section>
+        <section class="flavorBox2">
+          <h3 class="hidden">Grape flavor</h3>
+          <p>flavor 3</p>
+        </section>
         <!-- end flavor 3 -->
       </section>
       <!-- end flavor and price section -->
+      <section class="button2">
+        <h2 class="hidden">flavorButton</h2>
+        <div class="theButton2"><p>Button</p></div>
+      </section>
+      <!-- end button section -->
+
 
       <section class="left">
-        <h1 class="hidden">Company Goal of Gas-X</h1>
-        <div class="leftImg"><p>Image of Gas-x Goal</p></div>
-        <div class="leftContent"><p>Goal content & button</p></div>
+        <h2 class="hidden">Goal for Gas-X</h2>
+        <div class="leftImg">
+          <h3 class="hidden">Goal Image</h3>
+          <p>Image of Gas-x Goal</p>
+        </div>
+        <div class="leftContent">
+          <h3 class="hidden">The Goal</h3>
+          <p>Goal content & button</p>
+        </div>
       </section>
       <!-- end the goal section -->
       <footer id="mainFooter">
-        <h1 class="hidden">Main Footer</h1>
+        <h2 class="hidden">Main Footer</h2>
         <div id="footerNav"><p>Footer Nav</p></div>
         <!-- end footerNav -->
         <div id="contact"><p>Contact</p></div>
-        <!-- end copyright -->
+        <!-- end the contact button -->
       </footer>
       <!-- end mainFooter -->
+      <section id="copyright">
+        <h3 class="hidden">Copyright</h3>
+        <div id="copy"><p>Copyright © by Zhihan Chen</p></div>
+      </section>
+      <!-- end copyright -->
     </div>
 
   </main>
