add more css and html files

--- a/flavor.html
+++ b/flavor.html
@@ -7,88 +7,129 @@
   <title>Flavor & Price</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <!-- reset.css must link before the main.css -->
-  <link href="css.reset.css" rel="stylesheet" type="text/css">
+  <link href="css/reset.css" rel="stylesheet" type="text/css">
   <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <!-- content starts -->
-  <h1 class="hidden">The Gas-X Flavor & Price</h1>
+  <h1 class="hidden">Gas-X</h1>
   <main>
     <div id="siteContainer">
-      <nav id="mainNav">
+      <nav class="mainNav">
         <h2 class="hidden">Main Navigation section for Gas-X</h2>
-        <div id="logo">
+        <div class="logo">
           <h3 class="hidden">Logo</h3>
-          <p>Logo</p>
+          <img src="images/mountain.svg" alt="snow mountain icon">
         </div>
         <!-- end logo -->
-        <div id="WebName">
-          <h3 class="hidden">Gas-X</h3>
-          <p>Gas-X</P>
-          </div>
-        <!-- end title -->
-        <nav id="Nav">
+        <nav class="Nav">
           <h3 class="hidden">Navigation</h3>
-          <p>Nav</p>
+          <a href="index.html">HOME</a>
+          <a href="aboutUs.html">ABOUT US</a>
+          <a href="flavor.html">FLAVOR</a>
+          <a href="contact.html">CONTACT</a>
         </nav>
         <!-- end Nav -->
       </nav>
       <!-- end main Nav -->
-      <header id="Header">
-        <h2 class="hidden">Hero Image With Website Introduction</h2>
-        <div id="IntroHeader"><p>Header & Hero Image</p></div>
-      </header>
+
+
+      <section>
+        <header id="Header">
+          <h2 class="hidden">The flavor and price heading</h2>
+            <img src="images/heroImg_home.jpg" alt="Snow Mountain">
+              <p>
+                A variety of flavours
+                <br>
+                for you to choose from.
+              </p>
+        </header>
+      </section>
       <!-- end the main header -->
 
-      <section id="normalLight">
-        <h2 class="hidden">Normal Version Compare To Light Version</h2>
-        <section id="sideBox">
-          <h3 class="hidden">Normal Gas-x Introduction</h3>
-          <p>normal content</p>
-        </section>
-        <section id="centerImg">
-          <h3 class="hidden">Image of normal and light version compare</h3>
-          <p>center Image</p>
-        </section>
-        <section id="sideBox2">
-          <h3 class="hidden">Light Gas-x Introduction</h3>
-          <p>light content</p>
-        </section>
+
+      <section class="left">
+        <h2 class="hidden">peppermint flavor section</h2>
+          <img class="leftimg" src="images/beer_card.png" alt="beer with white background">
+          <h3 class="hidden">flavor 1 image</h3>
+        <div class="leftContent">
+          <h3 class="hidden">flavor 1 content</h3>
+          <p>
+            peppermint flavor - These beer are in few great flavors, they are all equally effective in tackling those uncomfortable feelings of gas and bloating. Gas-X is the #1 doctor-recommended solution for fast gas relief among OTC brands.
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <span class="pirce">$45.00</span>
+          </p>
+        </div>
       </section>
-      <!-- end the compare of normal and light -->
-      <section id="flavorChoice">
-        <h2 class="hidden">Choice of Flavor and Price</h2>
-        <section class="flavorChoice1">
-          <h3 class="hidden">Cherry flavor of Gas-X</h3>
-          <div class="flavorImg"><p>Flavor Image</p></div>
-          <div class="flavorContent"><p>Flavor Content</p></div>
-        </section>
-        <section class="flavorChoice1">
-          <h3 class="hidden">peppermint flavor of Gas-X</h3>
-          <div class="flavorImg"><p>Flavor Image</p></div>
-          <div class="flavorContent"><p>Flavor Content</p></div>
-        </section>
-        <section class="flavorChoice1">
-          <h3 class="hidden">Grape flavor of Gas-X</h3>
-          <div class="flavorImg"><p>Flavor Image</p></div>
-          <div class="flavorContent"><p>Flavor Content</p></div>
-        </section>
+      <!-- end the flavor 1 section -->
+
+      <section class="left">
+        <h2 class="hidden">cherry flavor section 2</h2>
+          <img class="leftimg" src="images/beer_card.png" alt="beer with white background">
+          <h3 class="hidden">flavor 2 image</h3>
+        <div class="leftContent">
+          <h3 class="hidden">flavor 2 content</h3>
+          <p>
+            cherry flavor - These beer are in few great flavors, they are all equally effective in tackling those uncomfortable feelings of gas and bloating. Gas-X is the #1 doctor-recommended solution for fast gas relief among OTC brands.
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <span class="pirce">$45.00</span>
+          </p>
+        </div>
       </section>
-      <footer id="mainFooter">
-        <h2 class="hidden">Main Footer</h2>
-        <div id="footerNav"><p>Footer Nav</p></div>
-        <!-- end footerNav -->
-        <div id="contact"><p>Contact</p></div>
-        <!-- end the contact button -->
+      <!-- end the flavor 2 section -->
+
+      <section class="left">
+        <h2 class="hidden">grape flavor section 3</h2>
+          <img class="leftimg" src="images/beer_card.png" alt="beer with white background">
+          <h3 class="hidden">flavor 3 image</h3>
+        <div class="leftContent">
+          <h3 class="hidden">flavor 3 content</h3>
+          <p>
+            grape flavor - These beer are in few great flavors, they are all equally effective in tackling those uncomfortable feelings of gas and bloating. Gas-X is the #1 doctor-recommended solution for fast gas relief among OTC brands.
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <span class="pirce">$45.00</span>
+          </p>
+        </div>
+      </section>
+      <!-- end the flavor 3 section -->
+
+
+      <footer>
+        <nav class="mainNav">
+          <h2 class="hidden">footer nav for Gas-X</h2>
+          <div class="logo">
+            <h3 class="hidden">Logo</h3>
+            <img src="images/mountain.svg" alt="snow mountain icon">
+          </div>
+          <!-- end logo -->
+          <nav class="Nav">
+            <h3 class="hidden">Navigation</h3>
+            <a href="index.html">HOME</a>
+            <a href="aboutUs.html">ABOUT US</a>
+            <a href="flavor.html">FLAVOR</a>
+            <a href="contact.html">CONTACT</a>
+          </nav>
+          <!-- end Nav -->
+        </nav>
+        <!-- end main Nav -->
       </footer>
-      <!-- end mainFooter -->
-      <section id="copyright">
-        <h3 class="hidden">Copyright</h3>
-        <div id="copy"><p>Copyright © by Zhihan Chen</p></div>
-      </section>
-      <!-- end copyright -->
+      <div>
+        <p class="Copyright">Copyright © by Zhihan Chen</p>
+      </div>
     </div>
 
   </main>
